[lektor-website-197] Adding plugins/tags page.

--- a/templates/plugin-tag.html
+++ b/templates/plugin-tag.html
@@ -28,4 +28,6 @@
   <div class="plugin">
     {{ render_plugin_list(this.items) }}
   </div>
+
+  <p>View a list of all Lektor plugin tags <a href="/plugins/tags">here</a>.</p>
 {% endblock %}
