--- a/templates/plugin.html
+++ b/templates/plugin.html
@@ -63,7 +63,7 @@
         {% if this.tags %}
           {% for t in this.tags|sort %}
             {{ "and " if loop.last }}
-            <a href="{{ ('/plugins/tag/' ~ t.lower() ~ '/')|url }}">{{ t }}</a>{{ ", " if not loop.last }}
+            <a href="{{ ('/plugins@tag/' ~ t ~ '/')|url }}">{{ t }}</a>{{ ", " if not loop.last }}
           {% endfor %}
         {% else %}
           <p>Plugin has no tags.</p>
