--- a/templates/plugins.html
+++ b/templates/plugins.html
@@ -26,6 +26,6 @@
   <p>
     Plugins are also tagged with keywords and topics.
     Their tags are listed on their page and are navigable.
-    You can view a list of all of the tags <a href="/plugins/tags">here</a>.
+    You can view a list of all of the tags <a href="/plugins/tags" class="ref">here</a>.
   </p>
 {% endblock %}
