--- a/templates/plugin-tag.html
+++ b/templates/plugin-tag.html
@@ -29,5 +29,7 @@
     {{ render_plugin_list(this.items) }}
   </div>
 
-  <p>View a list of all Lektor plugin tags <a href="/plugins/tags" class="ref">here</a>.</p>
+  <p>View a list of all Lektor plugin tags
+    <a href="{{ '/plugins/tags'|url }}" class="ref">here</a>.
+  </p>
 {% endblock %}
