--- a/templates/plugin.html
+++ b/templates/plugin.html
@@ -68,7 +68,9 @@
         {% else %}
           <p>Plugin has no tags.</p>
         {% endif %}
-        <p>View <a href="/plugins/tags" class="ref">all tags</a>.</p>
+        <p>
+          View <a href="{{ '/plugins/tags'|url }}" class="ref">all tags</a>.
+        </p>
       </div>
 
       <div class="col-sm-9 doc-styling">
