Add trailing slashes to links that should have them

--- a/templates/blog-archive/index.html
+++ b/templates/blog-archive/index.html
@@ -3,7 +3,7 @@
 {% block blog_body %}
   <h1>The Transcript Archive</h1>
   <p>
-    <a href="{{ '/blog'|url }}">&laquo; back to the blog</a>
+    <a href="{{ '/blog/'|url }}">&laquo; back to the blog</a>
   <p>
     There have been posts in the following years:
   <ul>
