--- a/templates/layout.html
+++ b/templates/layout.html
@@ -68,8 +68,8 @@
           {%- endif %}
         </div>
         <div class="col-sm-8">
-          <a href="{{ '/license'|url }}">License & Copyright</a> •
-          <a href="{{ '/contact'|url }}">Contact</a> •
+          <a href="{{ '/license/'|url }}">License & Copyright</a> •
+          <a href="{{ '/contact/'|url }}">Contact</a> •
           Made with <i class="fa fa-fw fa-heart" title="Heart"><span hidden>Heart</span></i> in Carinthia
         </div>
       </div>
