--- a/templates/plugin-tag.html
+++ b/templates/plugin-tag.html
@@ -12,11 +12,11 @@
         Take a look at their source code to see how they work!
       </p>
       <p>
-        <a href="{{ '/docs/plugins'|url }}" class="ref">Intro to Plugins</a>
+        <a href="{{ '/docs/plugins/'|url }}" class="ref">Intro to Plugins</a>
         ||
         <a href="{{ '/docs/cli/plugins/'|url }}" class="ref">Plugin Commands</a>
         ||
-        <a href="{{ '/docs/api/plugins'|url }}" class="ref">Plugin API</a>
+        <a href="{{ '/docs/api/plugins/'|url }}" class="ref">Plugin API</a>
         ||
         <a href="{{ event|url }}" class="ref">This Event</a>
       </p>
@@ -30,6 +30,6 @@
   </div>
 
   <p>View a list of all Lektor plugin tags
-    <a href="{{ '/plugins/tags'|url }}" class="ref">here</a>.
+    <a href="{{ '/plugins/tags/'|url }}" class="ref">here</a>.
   </p>
 {% endblock %}
