--- a/templates/plugin.html
+++ b/templates/plugin.html
@@ -69,7 +69,7 @@
           <p>Plugin has no tags.</p>
         {% endif %}
         <p>
-          View <a href="{{ '/plugins/tags'|url }}" class="ref">all tags</a>.
+          View <a href="{{ '/plugins/tags/'|url }}" class="ref">all tags</a>.
         </p>
       </div>
 
