--- a/templates/plugins.html
+++ b/templates/plugins.html
@@ -27,6 +27,6 @@
     Plugins are also tagged with keywords and topics.
     Their tags are listed on their page and are navigable.
     You can view a list of all of the tags
-    <a href="{{ '/plugins/tags'|url }}" class="ref">here</a>.
+    <a href="{{ '/plugins/tags/'|url }}" class="ref">here</a>.
   </p>
 {% endblock %}
