Refactor the author-email munging into a jinja global function
It probably makes more sense to generalize are template to deal with
variations in project metadata, rather than the munge the project
metadata into the expected legacy form.

--- a/templates/plugin.html
+++ b/templates/plugin.html
@@ -50,7 +50,7 @@
         <p><strong>Version:</strong> {{ pd.version }}</p>
         <p><strong>Author:</strong>
           {% if pd.author_email %}
-            <a href = "mailto:{{ pd.author_email }}">{{ pd.author }}</a>
+            {{ mailto_link(pd.author_email, pd.author) }}
           {% else %}
             {{ pd.author }}
           {% endif %}
